[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["ashfinenayet <ashfin.enayet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
datapane = { version = "^0.14.0", python = ">= 3.10, < 3.11.0" }
altair = "^4.2.0"
vega-datasets = "^0.9.0"
pandas = "^1.4.2"
vega = "^3.6.0"
altair-viewer = "^0.4.0"
streamlit = "^1.8.1"
plotly = "^5.7.0"
jupyter = "^1.0.0"
notebook = "^6.4.11"
altair-ally = "^0.1.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
